--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,11 @@
                 "editor.formatOnSave": true,
                 "python.formatting.provider": "black",
                 "python.linting.enabled": true,
-                "python.linting.flake8Enabled": true
+                "python.linting.flake8Enabled": true,
+                "files.associations": {
+                    "*.pyx": "python",
+                    "*.pxd": "python"
+                }
             }
         }
     }
