--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update && apt-get install -y \
     git build-essential curl \
     && rm -rf /var/lib/apt/lists/*
 
-RUN python3.9 -m pip install --upgrade pip
+RUN python3.9 -m pip install --upgrade pip cython
 
 WORKDIR /workspace
 
